# Localized-UNDO

./: .gitignore  LICENSE  README.md  pyproject.toml  run_distill_arithmetic.py  run_distill_language.py  run_partial_distill_wmdp.py  run_pretrain_arithmetic.py  run_pretrain_language.py  run_relearn_arithmetic.py  run_relearn_language.py  run_relearn_wmdp.py  wmdp_question_extraction.py
configs/arithmetic/: distill.yaml  partial_distill.yaml  pretrain.yaml  relearn.yaml  unlearn.yaml
configs/wmdp/: partial_distill.yaml  relearn.yaml  unlearn.yaml
important logs/: wmdp_eval_pretrained_gemma-2-2B.out  wmdp_eval_unlearn_RMU_teacher.out  wmdp_relearn_244847.out  wmdp_unlearn_244806.out
localization_masks/arithmetic-gemma-2-0.3B-snmf/: mask.pt
localized_undo/masks_utils/: directional_mask_factory.py  weight_surgeon.py
localized_undo/prepare_data/: download_arithmetic.py  download_datasets.py  download_datasets.sh  download_wmdp.sh  download_wmdp_bio_corpora.py  observe_dataset_samples.py  prepare.py
localized_undo/prepare_models/: download_gemma.py  prepare_reduced_gemma.py  reduce_gemma.py
localized_undo/tools/: distill.py  partial_distill_langarith.py  partial_distill_wmdp.py  pretrain.py  relearn_langarith.py  relearn_wmdp.py
localized_undo/utils/: chat.py  config_handler.py  generate_arithmetic.py  localization_diagnoser.py  localization_utils.py  loss_functions.py  mask_factory.py  paths.py  process_datasets.py  repnoise_loss.py  (+2 more)
scripts/: run_partial_distill_arithmetic.py  run_partial_distill_language.py  run_unlearn_language.py  run_unlearn_wmdp.py
(+62 files in other folders)
