[project]
name = "localized_undo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "aiolimiter>=1.2.1",
    "bitsandbytes>=0.45.2; sys_platform != 'darwin'",
    "datasets>=3.2.0",
    "flask>=3.1.0",
    "google>=3.0.0",
    "google-genai>=1.12.1",
    "h5py>=3.12.1",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "lm-eval>=0.4.7",
    "matplotlib>=3.10.0",
    "npm>=0.1.1",
    "orjson>=3.10.15",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.10",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.2",
    "wandb>=0.19.5",
    "sentencepiece>=0.1.99",
    "tiktoken>=0.7.0",
    "protobuf>=3.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["localized_undo*"]